<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


<!--
    <ImageView
        android:id="@+id/formBack"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />
-->

    <ImageView
        android:id="@+id/formLogo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/ic_imglogo"
        android:layout_marginBottom="30dp"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/formLogo"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/trans_white_rectangle"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"


            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_started"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="10dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/just_a_few_details_to_get_you_started"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:layout_marginBottom="30dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                />

            <AutoCompleteTextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="Username"
                android:background="@drawable/rounded_white"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:drawableStart="@drawable/ic_communication"
                android:textSize="14sp"
                android:drawablePadding="10dp"
                android:paddingStart="10dp"
                android:layout_marginBottom="10dp"
                android:textColorHint="#a8a8a8"

                />

            <AutoCompleteTextView
                android:id="@+id/userEmail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/email"
                android:background="@drawable/rounded_white"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:drawableStart="@drawable/ic_people"
                android:textSize="14sp"
                android:drawablePadding="10dp"
                android:paddingStart="10dp"
                android:layout_marginBottom="10dp"
                android:textColorHint="#a8a8a8"

                />
            <AutoCompleteTextView
                android:id="@+id/userPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/password"
                android:background="@drawable/rounded_white"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:drawableStart="@drawable/ic_visa"
                android:textSize="14sp"
                android:drawablePadding="10dp"
                android:paddingStart="10dp"
                android:inputType="textPassword"
                android:layout_marginBottom="10dp"
                android:textColorHint="#a8a8a8"

                />
            <AutoCompleteTextView
                android:id="@+id/userCPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/confirm_password"
                android:textColorHint="#a8a8a8"
                android:background="@drawable/rounded_white"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:drawableStart="@drawable/ic_books"
                android:textSize="14sp"
                android:drawablePadding="10dp"
                android:paddingStart="10dp"
                android:layout_marginBottom="10dp"
                android:inputType="textPassword"

                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms"
                android:layout_gravity="center"
                android:paddingStart="5dp"
                android:button="@drawable/radio_button"
                android:textSize="12sp"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textColor="@color/white"
                android:text="Register"
                android:textStyle="normal"
                android:background="@drawable/register_button"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="16dp"
                android:textSize="18dp"
                />
        </LinearLayout>
    </ScrollView>


</RelativeLayout>